Wrapped everything in error middleware
